corrected alignment

--- a/sass/styles.scss
+++ b/sass/styles.scss
@@ -375,11 +375,12 @@ header {
 
 .custom-text {
   text-align: left;
-  padding: 200px; /* Adjust padding as needed */
+  padding-left: 200px; /* Adjust padding as needed */
 }
 
 .custom-text h1, .custom-text h2, .custom-text h3 {
   text-align: center;
+  padding-left: 0;
 }
 
 /* ==========================================================================
